--- a/ProblemaMochilaTex/ProblemaMochila.tex
+++ b/ProblemaMochilaTex/ProblemaMochila.tex
@@ -247,15 +247,30 @@ Comparativa de tiempos en las ejecuciones de los distintos algoritmos. Analizar 
 
 % Bibliografía.
 %-------------------------------------------------------
-\begin{thebibliography}{9}
+\begin{thebibliography}{99}
 	
-\bibitem{wikipedia} Artículos de la enciclopedia libre Wikipedia sobre el problema de la mochila y la lista de 21 problemas NP-completos de Karp.
+\bibitem{horow-sah-raja98} E. Horowitz, S. Sahni y S. Rajasekaran. \emph{Computer Algorithms}. Tercera edición. Computer Science Press, 1998. Capítulos 4, 5 y 8.
 
-\bibitem{transparencias} Material de clase sobre algoritmos voraces, programación dinámica y ramificación y poda.
+\bibitem{hrist-shre04} Hristakeva-Shrestha. \emph{Solving the 0-1 Knapsack Problem with Genetic Algorithms}. Simpson College. \url{http://www.micsymposium.org/mics_2004/Hristake.pdf}
 
-\bibitem{trabAlgGen} Trabajo sobre los algoritmos genéticos hecho en el primer cuatrimestre.
+\bibitem{marti-orte-verd03} N. Martí Oliet, Y. Ortega Mallén y J. A. Verdejo López. \emph{Estructuras de datos y métodos algorítmicos: ejercicios resueltos}. Colección Prentice Practica, Pearson/Prentice Hall, 2003. Capítulo 13.
 
-\bibitem{paperAlgGen} Hristakeva-Shrestha, \emph{Solving the 0-1 Knapsack Problem with Genetic Algorithms}, Simpson College \url{http://www.micsymposium.org/mics_2004/Hristake.pdf}
+\bibitem{marti-orte-verd13} N. Martí Oliet, Y. Ortega Mallén y A. Verdejo. \emph{Estructuras de datos y métodos algorítmicos: 213 ejercicios resueltos}. Segunda edición. Garceta, 2013. Capítulos 12 y 15.
+
+\bibitem{micha95} Z. Michalewicz. \emph{Genetic Algorithms + Data Structures = Evolution Programs}. Third, revised and extended edition. Springer, 1995.
+
+\bibitem{mitch99} M. Mitchell. \emph{An Introduction to Genetic Algorithms}. Fifth printing. The MIT Press, 1999.
+
+\bibitem{neap15} R. Neapolitan. \emph{Foundations of Algorithms}. Quinta edición. Jones and Barlett, 2015. Capítulos 4 y 10.
+
+\bibitem{neap-naim04} R. Neapolitan y K. Naimipour. \emph{Foundations of Algorithms using C++ pseudocode}. Jones and Barlett Publishers, 2004. Capítulos 3 y 6.
+
+\bibitem{wikipedia} Artículos de la enciclopedia libre Wikipedia:
+\begin{itemize}
+	\item Problema de la mochila:\\ \url{https://es.wikipedia.org/wiki/Problema_de_la_mochila}
+	\item Lista de 21 problemas NP-completos de Karp:\\ \url{https://es.wikipedia.org/wiki/Lista_de_21_problemas_NP-completos_de_Karp}
+	\item Algoritmos genéticos:\\ \url{https://en.wikipedia.org/wiki/Genetic_algorithm}
+\end{itemize}
 
 \end{thebibliography}
 
