Añadido comentario en la introduccion de prog din

--- a/ProblemaMochilaTex/ProblemaMochila.tex
+++ b/ProblemaMochilaTex/ProblemaMochila.tex
@@ -128,7 +128,7 @@ Analizaremos ahora los costes en tiempo y memoria del algoritmo. En cuanto al ti
 
 \subsection{Programación dinámica}
 
-En este apartado implementaremos un algoritmo de programación dinámica para el problema de la mochila en su versión 0-1. Obtendremos una solución exponencial con respecto al tamaño de los datos de entrada.
+En este apartado implementaremos un algoritmo de programación dinámica para el problema de la mochila en su versión 0-1. Tendremos que tener la restricción de que los pesos de los objetos y el peso total de la mochila sean números enteros. Sin embargo esto no supone una restricción real para el algoritmo ya que, siempre que los pesos sean números racionales, podremos multiplicar todos los pesos por una constante para que resulten en números enteros (por ejemplo, suponiendo los pesos escritos como fracciones, por el mínimo común múltiplo de los denominadores). Con este algoritmo obtendremos una solución exponencial con respecto al tamaño de los datos de entrada.
 
 \subsubsection{Descripción de la solución}
 
